--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -13,7 +13,7 @@
 }
 
 @misc{espeak,
-	note = {http://espeak.sourceforge.net/},
+	note = {\url{http://espeak.sourceforge.net/}},
 	title = {{eSpeak text to speech}},
 	year = {Visitado em Julho, 2014}, 
 	url = {http://espeak.sourceforge.net/}
@@ -24,4 +24,39 @@
 	Title = {Spoken Language Processing}, 
 	Publisher = {Prentice-Hall},
 	Year = {2001} 
+}
+
+@book {Taylor09,
+	Author = {Paul Taylor},
+	Title = {Text-To-Speech Synthesis},
+	Publisher = {Cambridge University Press},
+	Year = {2009} 
+}
+
+@misc{falabrasilsite,
+	note = {\url{http://www.laps.ufpa.br/falabrasil/}},
+	title = {{FalaBrasil: Reconhecimento de Voz para o Português Brasileiro}},
+	year = {{Visitado em Julho}, 2014},
+	url = {http://www.laps.ufpa.br/falabrasil/}
+}
+
+@article {Siravenha08,
+	Author = {Ana Siravenha and Nelson Neto and Valquíria Macedo and Aldebaro Klautau},
+	Title = {Uso de Regras Fonológicas com Determinação de Vogal Tônica para Conversão Grafema-Fone em {P}ortuguês {B}rasileiro},
+	Journal = {7th International Information and Telecommunication Technologies Symposium},
+	Year = {2008}
+}
+
+@misc{IBGE10,
+	key = {IBGE},
+	url = {www.ibge.gov.br/home/estatistica/populacao/censo2010/},
+	title = {Census Demographic Profiles. {V}isited in {J}anuary},
+	year = {2010}
+}
+
+@book {Young00,
+	Author = {Young, S. {et. al}},
+	Title = {The HTK Book},
+	Publisher = {Microsoft Corporation, Version 3.0},
+	Year = {2000}
 }
