references + future works

--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -1,12 +1,28 @@
+@book{cat,
+	title = {Comitê de Ajudas Técnicas. Tecnologia Assistiva},
+	pages = {138p},
+	year = {2009},
+	journal = {{CORDE}},
+	address = {Brasília, Brasil},
+	publisher = {Subsecretaria Nacional de Promoção dos Direitos da Pessoa com Deficiência.}
+}
+
+@misc{angstrom,
+	note = {\url{http://www.angstrom-distribution.org/}},
+	title = {{The Ångström Distribution}},
+	year = {Visitado em Abril, 2015},
+	url = {http://www.angstrom-distribution.org/}
+}
+
 @misc{juliussite,
-	note = {http://julius.sourceforge.jp/en\_index.php},
+	note = {\url{http://julius.sourceforge.jp/en\_index.php}},
 	title = {{Open-Source Large Vocabulary CSR Engine Julius}},
 	year = {Visitado em Julho, 2014},
 	url = {http://julius.sourceforge.jp/en_index.php}
 }
 
 @misc{htksite, 
-	note = {http://htk.eng.cam.ac.uk/}, 
+	note = {\url{http://htk.eng.cam.ac.uk/}}, 
 	title = {{Hidden Markov Model Toolkit (HTK)}},
 	year = {Visitado em Julho, 2010},
 	url = {http://htk.eng.cam.ac.uk/}
@@ -48,9 +64,10 @@
 }
 
 @misc{IBGE10,
+	note = {\url{www.ibge.gov.br/}},
 	key = {IBGE},
+	title = {Perfis do Censo Demográfico. {V}isitado em {J}aneiro},
 	url = {www.ibge.gov.br/home/estatistica/populacao/censo2010/},
-	title = {Census Demographic Profiles. {V}isited in {J}anuary},
 	year = {2010}
 }
 
@@ -58,5 +75,49 @@
 	Author = {Young, S. {et. al}},
 	Title = {The HTK Book},
 	Publisher = {Microsoft Corporation, Version 3.0},
+	pages = {22--42},
 	Year = {2000}
 }
+
+@misc{mhl,
+	note = {\url{http://michaelhleonard.com/}},
+	title = {{Raspberry Pi or Beaglebone Black}},
+	year = {{Visitado em Abril}, 2015},
+	url = {http://michaelhleonard.com/raspberry-pi-or-beaglebone-black/}
+}
+
+@misc{randomnerd,
+	note = {\url{http://randomnerdtutorials.com/}},
+	title = {{Arduino vs. Raspberry Pi vs BeagleBone}},
+	year = {{Visitado em Abril}, 2015},
+	url = {http://randomnerdtutorials.com/arduino-vs-raspberry-pi-vs-beaglebone-vs-pcduino/}
+}
+ 
+@misc{makezine,
+	note = {\url{http://makezine.com/}},
+	title = {{Arduino Uno vs BeagleBone vs Raspberry Pi}},
+	year = {{Visitado em Abril}, 2015},
+	url = {http://makezine.com/2013/04/15/arduino-uno-vs-beaglebone-vs-raspberry-pi/}
+}
+
+@misc{mundoestranho,
+	note = {\url{http://mundoestranho.abril.com.br/}},
+	title = {{Como funciona o controle remoto?}},
+	year = {{Visitado em Abril}, 2015},
+	url = {http://mundoestranho.abril.com.br/materia/como-funciona-o-controle-remoto}
+}
+
+@misc{uol_hsw,
+	note = {\url{http://tecnologia.hsw.uol.com.br/}},
+	title = {{Como funcionam os controles remotos}},
+	year = {{Visitado em Abril}, 2015},
+	url = {http://tecnologia.hsw.uol.com.br/controle-remoto.htm}
+}
+
+@misc{voxforge,
+	note = {\url{http://www.voxforge.org/}},
+	title = {{Tutorial: Create Acoustic Model}},
+	year = {{Visitado em Abril}, 2015},
+	url = {http://www.voxforge.org/home/dev/acousticmodels/linux/create/htkjulius/tutorial}
+}
+
