--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -7,6 +7,7 @@
 \usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage{url}
+\usepackage{breakurl}
 \usepackage[left=2.7cm, right=2.7cm, bottom=3cm]{geometry}
 \usepackage{caption}
 \usepackage{subcaption}
@@ -126,6 +127,9 @@ Abril/2015
 
 % Dificuldades e Soluções ------------------------------------------------------
 \input{Chapters/cap_dificuldades}
+
+% Dificuldades e Soluções ------------------------------------------------------
+\input{Chapters/cap_trab_futuros}
 
 % Bibliography and References --------------------------------------------------
 \bibliographystyle{ieeetr}
