codes + update tex

--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -108,34 +108,34 @@ Abril/2015
 % Introdução -------------------------------------------------------------------
 \newpage
 \pagestyle{fancy}
-\input{Chapters/cap_intro}
+\input{chapters/cap_intro}
 
 % Objetivos --------------------------------------------------------------------
-\input{Chapters/cap_objetivos}
+\input{chapters/cap_objetivos}
 
 % Justificativa ----------------------------------------------------------------
-\input{Chapters/cap_justificativa}
+\input{chapters/cap_justificativa}
 
 % Revisão Teórica --------------------------------------------------------------
-\input{Chapters/cap_rev_teorica}
+\input{chapters/cap_rev_teorica}
 
 % Metodologia ------------------------------------------------------------------
-\input{Chapters/cap_metodologia}
+\input{chapters/cap_metodologia}
 
 % Orçamento --------------------------------------------------------------------
-\input{Chapters/cap_orcamento}
+\input{chapters/cap_orcamento}
 
 % Dificuldades e Soluções ------------------------------------------------------
-\input{Chapters/cap_dificuldades}
+\input{chapters/cap_dificuldades}
 
-% Dificuldades e Soluções ------------------------------------------------------
-\input{Chapters/cap_trab_futuros}
+% Trabalhos Futuros ------------------------------------------------------------
+\input{chapters/cap_trab_futuros}
 
 % Bibliography and References --------------------------------------------------
 \bibliographystyle{ieeetr}
 \bibliography{tech_report}
 
-% Códigos e Background Matemático, Math Background and so on ---------------------------------------------
+% Códigos e Background Matemático ----------------------------------------------
 \newpage
 \appendix
 \end{document}
