Objetivo edit^C justificativa (2IEEE ref.)

--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -52,8 +52,8 @@
 
 \title{
 	\vspace{40pt}
-	Controle de Aparelhos Eletrônicos por Sistemas Embarcados: Uma 
-	Solução com Suporte à Reconhecimento e Síntese de Voz
+	Uso de Reconhecedor e Sintetizador de Voz Embarcados para Controle de Equipamentos Eletrônicos
+	% Controle de Aparelhos Eletrônicos por Sistemas Embarcados com Suporte à Reconhecimento e Síntese de Voz
 	\vspace{25pt}
 }
 
@@ -138,5 +138,6 @@ Abril/2015
 % Códigos e Background Matemático ----------------------------------------------
 \newpage
 \appendix
+\input{apendice}
 \end{document}
 %%% EOF %%%
