--- a/tech_report/capa.tex
+++ b/tech_report/capa.tex
@@ -10,8 +10,8 @@ TELECOMUNICAÇÕES\\
 
 \vspace{120pt}
 {\Large
-Controle de Aparelhos Eletrônicos por Sistemas Embarcados:\\\vspace{3pt}
-Uma Solução com Suporte à Reconhecimento e Síntese de Voz\\%\vspace{7pt} 
+Uso de Reconhecedor e Sintetizador de Voz Embarcados para Controle de Equipamentos Eletrônicos\\
+%Controle de Aparelhos Eletrônicos por Sistemas Embarcados com Suporte à Reconhecimento e Síntese de Voz\\
 }
 
 \vfill
