--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -22,32 +22,32 @@
 \fancyhead[lo]{\leftmark}
 \fancyhead[re]{\rightmark}
 
-\lstset{%                                                                     
-	linewidth=\textwidth,%framed box is the text size                         
-	xleftmargin=.25in,                                                        
-	xrightmargin=.25in,                                                       
-	frame=trbl,                                                               
-	columns=flexible,                                                         
-	captionpos=t,                                                             
-	upquote=false,                                                            
-	basicstyle=\small\ttfamily,                                        
-	firstnumber=1,%                                                           
-	numberfirstline=false,%                                                   
-	numbers=left,%                                                            
-	numberstyle=\tiny,%                                                       
-	stepnumber=5,%                                                            
-	numbersep=5pt,%                                                           
-	backgroundcolor=\color{blue!10},%                                         
-	tabsize=4,%                                                               
-	keywordstyle=\color{green!65!black},%                                     
-	commentstyle=\color{blue},%                                               
-	stringstyle=\color{magenta},%                                             
-	breaklines=true,%                                                         
-	emph={label},%                                                            
-	abovecaptionskip=10pt,%                                                   
-	belowcaptionskip={\abovecaptionskip},%                                    
-	showstringspaces=false,                                                   
-	literate={Ê}{{\^{E}}}1                                                    
+\lstset{%
+	linewidth=\textwidth,%framed box is the text size 
+	xleftmargin=.25in,
+	xrightmargin=.25in, 
+	frame=trbl, 
+	columns=flexible, 
+	captionpos=t, 
+	upquote=false,
+	basicstyle=\small\ttfamily,
+	firstnumber=1,% 
+	numberfirstline=false,% 
+	numbers=left,%
+	numberstyle=\tiny,% 
+	stepnumber=5,%
+	numbersep=5pt,% 
+	backgroundcolor=\color{blue!10},% 
+	tabsize=4,% 
+	keywordstyle=\color{green!65!black},% 
+	commentstyle=\color{blue},% 
+	stringstyle=\color{magenta},% 
+	breaklines=true,% 
+	emph={label},%
+	abovecaptionskip=10pt,% 
+	belowcaptionskip={\abovecaptionskip},%
+	showstringspaces=false, 
+	literate={Ê}{{\^{E}}}1
 }%
 
 \title{
@@ -72,14 +72,14 @@
 	\and
 	Thiago Barros Coelho\\
 	\texttt{tbarroscoelho@gmail.com}\\
-	\texttt{201106840040}
+	\texttt{201106840041}
 }
 
 \date{
 \vspace{100pt}
 \begin{table}[!h]
 	\begin{tabular*}{.9\linewidth}{p{.45\linewidth}p{.45\linewidth}}
-	& Projeto apresentado à disciplina Projeto de Harware de Interfaceamento 
+	& Projeto apresentado à disciplina Projetos de Harware e Interfaceamento 
 	como requisito de avaliação.
 	Professores: Jeferson Leite e Adalbery Castro.
 	\end{tabular*}
