presentation init + bib edit

--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -1,3 +1,59 @@
+@misc{rc5_wiki,
+	note = {\url{http://en.wikipedia.org/wiki/RC-5}},
+	title = {{RC-5 Philips Procotol}},
+	year = {Visitado em Abril, 2015},
+	url = {http://en.wikipedia.org/wiki/RC-5}
+}
+
+@misc{irdroid,
+	note = {\url{http://www.irdroid.com/}},
+	title = {{IRdroid: Universal Remote for Android}},
+	year = {Visitado em Abril, 2015},
+	url = {http://www.irdroid.com/}
+}
+
+@misc{harmonysc,
+	note = {\url{http://www.logitech.com/en-us/product/harmony-smart-control}},
+	title = {{Logitech Harmony Smart Control}},
+	year = {Visitado em Abril, 2015},
+	url = {http://www.logitech.com/en-us/product/harmony-smart-control}
+}
+
+@misc{andicelabs,
+	note = {\url{http://andicelabs.com/2014/03/usb-audio-beaglebone/}},
+	title = {{USB Audio on the BeagleBone}},
+	year = {Visitado em Abril, 2015},
+	url = {http://andicelabs.com/2014/03/usb-audio-beaglebone/}
+}
+
+@inproceedings{Barrena11,
+	author = {Stephanie Barrena {et. al}},
+	title = {Designing Android Applications with both Online and Offline Voice Control of Household Devices},
+	publisher = {{IEEE}},
+	year = {2011}
+}
+
+@inproceedings{Wechsung09,
+	author = {Ina Wechsung and Anja B. Naumann},
+	title = {Evaluating a Multimodal Remote Control: The Interplay Between User Experience and Usability},
+	publisher = {{IEEE}},
+	year = {2009}
+}
+
+@inproceedings{Laisa12,
+	author = {Laisa C. P. Costa {et. al}},
+	title = {Accessibility in Digital Television: Designing Remote Controls},
+	publisher = {{IEEE Transactions on Consumer Electronics}},
+	year = {2012}
+}
+
+@inproceedings{Gelderblom02,
+	author = {Gert Jan Gelderblom and Luc P. de Witte},
+	title = {The Assessment of Assistive Technology: Outcomes, Effects and Costs},
+	publisher = {IOS Press. Technology and Disability 91-94},
+	year = {2002}
+}
+
 @book{cat,
 	title = {Comitê de Ajudas Técnicas. Tecnologia Assistiva},
 	pages = {138p},
