--- a/tech_report/presentation/present.tex
+++ b/tech_report/presentation/present.tex
@@ -1,58 +1,95 @@
-\documentclass{beamer}
+\documentclass[subsection=false]{beamer}
 \setbeamertemplate{footline}[frame number] % numerar slides
 \setbeamertemplate{navigation symbols}{} % retirar barra de navegação
 
 \mode<presentation>
 \usetheme{Warsaw}
-\ifdefined\hyperref  
-	\usepackage[brazil]{babel}
-	\usepackage[latin1]{inputenc}
-	\usepackage{graphicx}
-	\usepackage{subcaption}  
-	\usepackage{pgfpages}
-	\usepackage{ifpdf}   
-	\usepackage{multimedia}  
-	\usepackage{color}   
-	\usepackage{url} 
-	\usepackage{hyperref}
-	\usepackage{listings}
-	\usepackage{lastpage}
 
-\hypersetup{ 
-pdftitle={Teki Project: ASR} 
-pdfauthor={Cassio Trindade Batista}   
+\ifdefined\hyperref  
+
+\usepackage[brazil]{babel}
+\usepackage[latin1]{inputenc}
+\usepackage{graphicx}
+\usepackage{subcaption}  
+\usepackage{pgfpages}
+\usepackage{ifpdf}   
+\usepackage{multimedia}  
+\usepackage{color}   
+\usepackage{url} 
+\usepackage{hyperref}
+\usepackage{lastpage}
+
+\pgfdeclareimage[width=0.85cm, height=1.10cm]{ufpa}{Figures/logo_ufpa}
+\logo{\pgfuseimage{ufpa}}
+
+\hypersetup{
+	pdftitle={ASR e TTS Embarcado para Controle de TV}
+	pdfauthor={Cassio Trindade Batista}
 }
 \fi
 
 \title[ASR + TTS: Controle de Equipamentos Eletrônicos\hspace{2.10cm}\thepage/\pageref{LastPage}]
 {Uso de Reconhecedor e Sintetizador de Voz para Controle de Equipamentos Eletrônicos}
-\author[Cassio, Pedro, Gabriel e Thiago]{
-\small
+
+\author[Cassio, Pedro, Gabriel e Thiago]{\small
 Cassio Trindade Batista\\
 Gabriel Peixoto de Carvalho\\
 Pedro Henrique C. F. Soares\\
 Thiago Barros Coelho}
-\institute{
-\scriptsize
+
+\institute{\scriptsize
 Universidade Federal do Pará\\
 Instituto de Tecnologia\\
 Faculdade de Engenharia da Computação e Telecomunicações\\
 Disciplina: Projetos de Hardware e Interfaceamento\\
 Professores: Jeferson Leite e Adalbery Castro\\
 \begin{figure}
-	\vspace{-.1cm}
-	\includegraphics[width=.12\textwidth]{Figures/logo_ufpa}
+	\includegraphics[width=.13\textwidth]{Figures/logo_ufpa}
 \end{figure}
+\vspace{-.5cm}
 }
-\date{}
+\date{\small{30 de abril de 2015}}
 
 \begin{document}
-\begin{frame}[plane]
-\titlepage
+\begin{frame}[plain]
+	\titlepage
 \end{frame}
 
+\section{Introdução}
 \begin{frame}{Introdução}
-	Foda-se
+\end{frame}
+
+\begin{frame}{ASR vs TTS}
+\begin{figure}
+	\includegraphics[width=\textwidth]{Figures/asr_tts}
+\end{figure}
+\end{frame}
+
+\begin{frame}{ASR vs TTS}
+\begin{figure}
+	\includegraphics[width=\textwidth]{Figures/asr_tts_soft}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Reconhecimento Automático de Voz}
+\begin{figure}
+	\includegraphics[width=\textwidth]{Figures/asr_sch}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Beagle Beagle Beagle}
+\begin{figure}
+	\includegraphics[width=\textwidth]{Figures/schematic}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Philips RC-5 Protocol}
+\begin{figure}
+	\includegraphics[width=.9\textwidth]{Figures/sch_rc5}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Vlw Flw!}
 \end{frame}
 \end{document}
 %%% EOF %%%
