--- a/tech_report/presentation/present.tex
+++ b/tech_report/presentation/present.tex
@@ -3,7 +3,7 @@
 \setbeamertemplate{navigation symbols}{} % retirar barra de navegação
 
 \mode<presentation>
-\usetheme{Warsaw}
+\usetheme{Singapore}
 
 \ifdefined\hyperref  
 
@@ -48,7 +48,7 @@ Professores: Jeferson Leite e Adalbery Castro\\
 \end{figure}
 \vspace{-.5cm}
 }
-\date{\small{30 de abril de 2015}}
+\date{\small{30 de maio de 2015}}
 
 \begin{document}
 \begin{frame}[plain]
